[package]
name = "honeybit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.12"
serde_json = "1"
toml = "0.8"
once_cell = "1"
byteorder = "1"
rand = "0.8"
reqwest = "0.12"
md5 = "0.7"
cfg-if = "1"
flate2 = "1"
identity-hash = "0.1"
arrayvec = "0.7"
mint = "0.5"
pollster = "0.3"
chrono = "0.4"
itertools = "0.12"
bytemuck = "1"
codepage-437 = "0.1"
fixed = "1"
base62 = "2"
dirs = "5"

[dependencies.serde]
version = "1"
features = ["serde_derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "net", "time", "sync"]

[dependencies.jaded]
version = "0.4"
features = ["derive"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.uuid]
version = "1.8.0"
features = ["v4", "fast-rng"]

[dependencies.parking_lot]
version = "0.12"
features = ["deadlock_detection", "hardware-lock-elision"]
