[package]
name = "oxine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1"
flate2 = "1"
tokio = { version = "1", features = ["io-util"]}
mint = "0.5"
identity-hash = "0.1"
arrayvec = "0.7"
base62 = "2"
rand = "0.8"
serde = {version = "1", features = ["derive"]}