[package]
name = "oxine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1"
flate2 = "1"
tokio = { version = "1", features = ["io-util"]}
mint = "0.5"
base62 = "2"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
log = "0.4.21"
codepage-437 = "0.1"
